// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Switch component tests it should match snapshot 1`] = `
<div>
  <label
    aria-label="Switch button"
    class="sc-eCImPb dYRvzG"
    tabindex="0"
  >
    <input
      checked=""
      type="checkbox"
    />
    <span />
  </label>
</div>
`;

exports[`Switch component tests it should match snapshot 2`] = `
<div>
  <label
    aria-label="Switch button"
    class="sc-eCImPb dYRvzG"
    tabindex="0"
  >
    <input
      type="checkbox"
    />
    <span />
  </label>
</div>
`;
